--- a/WebContent/views/compensationDetails.html
+++ b/WebContent/views/compensationDetails.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html" />
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-<title>Expenditure Details</title>
+<title>Staffing & Compensation Details</title>
 
 <!-- CSS  -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -40,15 +40,13 @@
 	
 	<main>
 	<div class="container">
-		<h5>Expenditure Details</h5>
+		<h5>Staffing & Compensation Details</h5>
 		<div class="input-field col s12">
-			<select id="expenditureSelect">
+			<select id="compensationSelect">
 				<option value="" disabled selected>Choose your option</option>
-				<option value="1">State wise expenditure contribution</option>
-				<option value="2">Total state expenditure</option>
+				<option value="1">Compensation Per Staff Ratio</option>
 			</select>
 		</div>
-
 
 		<div id='map_canvas'></div>
 	</main>
